# dropped-a-neural-net

./: .gitignore  LICENSE  pyproject.toml  solve.ipynb
pieces/: piece_0.pth  piece_1.pth  piece_10.pth  piece_11.pth  piece_12.pth  piece_13.pth  piece_14.pth  piece_15.pth  piece_16.pth  piece_17.pth  piece_18.pth  piece_19.pth  piece_2.pth  piece_20.pth  piece_21.pth  piece_22.pth  piece_23.pth  piece_24.pth  piece_25.pth  piece_26.pth  piece_27.pth  piece_28.pth  piece_29.pth  piece_3.pth  piece_30.pth  piece_31.pth  piece_32.pth  piece_33.pth  piece_34.pth  piece_35.pth  piece_36.pth  piece_37.pth  piece_38.pth  piece_39.pth  piece_4.pth  piece_40.pth  piece_41.pth  piece_42.pth  piece_43.pth  piece_44.pth  (+57 more)
